--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,9 @@ testem.log
 /typings
 yarn-error.log
 
-# e2e
-/e2e/*.js
-/e2e/*.map
+# cypress
+/cypress/videos/*.mp4
+
 
 # System Files
 .DS_Store
